# atracbot

./: Readme.md  bot.py  catkin_workspace.workspace.user.02911af  catkin_workspace.workspace.user.6971136  catkin_workspace.workspace.user.b663863  example_talker.cpp  face_detection  face_detection.cpp  install sql  install_git.txt  objdetect.cpp  object_detection.py  persiapan.txt  trash.sql
BACKUP-1/cadangan/stereo/: CMakeLists.txt  package.xml
BACKUP-1/cadangan/stereo/launch/: stereo.launch  stereo_sim.launch
BACKUP-1/cadangan/stereo/scripts/: camera_simulator.py  rectify.py
BACKUP-1/cadangan/stereo/src/: calib_camera.cpp  draw_boxes.cpp  stereo_node.cpp
BACKUP-1/camera/: CMakeLists.txt
BACKUP-1/camera/src/: img_publisher.cpp  img_stream_publisher.cpp  img_stream_subscriber.cpp  open_camera_1.cpp  trash_detection.cpp
BACKUP-1/minorucam/src/v4l2stereo_no_sse/: Makefile
BACKUP-1/simulasi/: CMakeLists.txt  package.xml
BACKUP-1/simulasi/src/: package.xml  robot1.cpp  robot2.cpp
BACKUP-1/stereo/launch/: stereo_sim.launch
BACKUP-1/stereo/scripts/: camera_simulator.py  capture_images.py  rectify.py
BACKUP-1/stereo/src/: calib_camera.cpp  stereo_node.cpp
WEEKLY_PROGRESS/: .~hasil haarxlsx.xlsx  .~weekly Progress_4.pptx  hasil haarxlsx.xlsx  kisron_weekly_progress_0.pptx  kisron_weekly_progress_1.pptx  kisron_weekly_progress_2.pptx  kisron_weekly_progress_3.pptx  kisron_weekly_progress_4.pptx
WEEKLY_PROGRESS/week_10/: kisron_weekly_progress_10.pptx
WEEKLY_PROGRESS/week_9/: kisron_weekly_progress_9.pptx
arduino_code/send_dual/: send_dual.ino
camera/: CMakeLists.txt  trash_classify.cpp
camera/include/: HOG.h
camera/launch/: stereo_usb_cam_stream_publisher.launch
camera/src/: StereoGrab.cpp  StereoGrab.h  coba_pcl.cpp  img_stream_publisher.cpp  img_stream_subscriber.cpp  img_subscriber.cpp  trash_classify.cpp
cpp_test/: cascade_20x20.xml  cascade_40x40.xml  face_detection.cpp  haar  haar.cpp  main.cpp  open_camera  open_camera.cpp  output
cpp_test/detectball-master/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  detectball  detectball.cpp  kertas.xml
devel/lib/beginner_tutorials/: listener  talker
devel/lib/camera/: classification  coba_pcl  img_publisher  img_stream_publisher  img_stream_subscriber  img_subscriber  open_camera  open_camera_1  trash_classify  trash_detection
devel/lib/kevinpkg/: detection1  img_writer  show_fps  stereoCapture
devel/lib/omnirobot/: bicycle  fuzzy  fuzzybicycle  inverskinematic  odometry  pathfollowing
devel/lib/pkgconfig/: beginner_tutorials.pc  camera.pc  kevinpkg.pc  omnirobot.pc
devel/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
devel/lib/serial/: serial_example
devel/lib/slave/: data_conversion  decision_making_system  prediction_system  publisher  read_sensor
devel/share/beginner_tutorials/cmake/: beginner_tutorials-msg-paths.cmake  beginner_tutorialsConfig.cmake
devel/share/camera/cmake/: cameraConfig.cmake
devel/share/kevinpkg/cmake/: kevinpkgConfig.cmake
devel/share/omnirobot/cmake/: omnirobotConfig.cmake
file calib/: mystereocalib1.yml  mystereocalib2.yml  mystereocalib3.yml
install/lib/pkgconfig/: beginner_tutorials.pc  camera.pc
install/lib/rosserial_python/: message_info_service.py
install/lib/rosserial_server/: serial_node  socket_node  udp_socket_node
install/share/beginner_tutorials/cmake/: beginner_tutorialsConfig.cmake
install/share/camera/: package.xml
install/share/camera/cmake/: cameraConfig.cmake
install/share/kevinpkg/cmake/: kevinpkgConfig.cmake
install/share/omnirobot/cmake/: omnirobotConfig.cmake
install/share/rosserial_arduino/cmake/: rosserial_arduinoConfig.cmake
kevinpkg/: package.xml
kevinpkg/src/: cascade.xml  detection1.cpp  pclViewer.cpp  stereoNode.cpp
src/beginner_tutorials/: CMakeLists.txt
src/beginner_tutorials/launch/: my_launch.launch
src/beginner_tutorials/src/: listener.cpp  talker (copy).cpp  talker.cpp
src/camera/: CMakeLists.txt  HOG.cpp
src/camera/include/: HOG.cpp  glcm.cpp  glcm.h
src/camera/src/: StereoFunction.cpp  StereoFunction.h  open_camera.cpp  trash_classify.cpp  trash_detection.cpp
src/cameras/: CMakeLists.txt  package.xml
src/cameras/src/: open_camera.cpp
src/kevinpkg/: CMakeLists.txt
src/kevinpkg/src/: img_writer.cpp  show_fps.cpp  stereoCapture.cpp
src/my_roscpp_library/: CMakeLists.txt
src/my_roscpp_library/include/my_roscpp_library/: my_super_roscpp_library.h  stereofunction.h  stereograb.h
src/my_roscpp_library/src/: my_super_roscpp_library.cpp  stereofunction.cpp  stereograb.cpp
src/omnirobot/launch/: bicycle.launch
src/omnirobot/src/: bicycle.cpp  fuzzybicycle.cpp
src/slave/: CMakeLists.txt
(+23 files in other folders)
